Fix: corrigido layout shift(movimento do layout) problema com bordas

--- a/Formulario-de-matricula/assets/style/fields/input.css
+++ b/Formulario-de-matricula/assets/style/fields/input.css
@@ -3,8 +3,8 @@ input, textarea, select {
     appearance: none;
     /* appearance: none remove o estilo padrão que vem do navegador */
     border-radius: .5rem;
-    border: 2px solid var(--stroke-default);
-
+    border: 2px solid transparent;
+    outline: 1px solid var(--stroke-default);
     padding: .75rem 1rem;
     font: var(--text);
 }
@@ -24,7 +24,7 @@ input:focus, select:focus, textarea:focus, input[type="date"]:focus-within {
     de destaque ao elemento
     */
     outline: .25rem solid var(--surface-secondary);
-    border: .125rem solid var(--stroke-highlight);
+    border-color: var(--stroke-highlight);
     outline-offset: .1px;
 }
 
